# Meitu

./: .gitignore  .gitmodules  CONTRIBUTING.md  clean.sh  sync.sh  train.md
MapAnything/: .gitignore  CHANGELOG.md  README.md  eval.py  eval_multimodal.py  pyproject.toml
MapAnything/bash_scripts/benchmark/ablations/1_output_representation/: 1a_pm_conf_mask.sh
MapAnything/bash_scripts/benchmark/ablations/2_attention/: 2b_aat_w_pe.sh
MapAnything/bash_scripts/benchmark/ablations/3_loss/: 3a_no_log_scaling.sh  3b_no_robust_loss.sh  3f_no_ray_dirs_loss.sh  3g_no_depth_loss.sh
MapAnything/bash_scripts/benchmark/ablations/6_expert_training_img/: 6_expert_img.sh
MapAnything/bash_scripts/benchmark/ablations/a1_img/: a1d_img_mapa.sh
MapAnything/bash_scripts/benchmark/ablations/a1_mvs/: a1a_mvs_pm_conf_mask.sh  a1b_mvs_campm_pose_conf_mask.sh  a1c_mvs_rdp_conf_mask.sh  a1d_mvs_mapa.sh
MapAnything/bash_scripts/benchmark/ablations/base/: base_img_only_curri_24v.sh
MapAnything/bash_scripts/benchmark/calibration/: anycalib.sh  mapanything.sh  moge_2.sh
MapAnything/bash_scripts/benchmark/dense_2_view/: dust3r.sh  mapa_4v.sh  mast3r.sh  pi3.sh  pow3r.sh  vggt.sh
MapAnything/bash_scripts/benchmark/dense_n_view/: mapa_24v_apache.sh  mapa_24v_csfm_apache.sh  mapa_24v_mvs.sh  mapa_24v_mvs_nm.sh  mapa_24v_nmp_md.sh  mapa_24v_psfm_nm.sh  mapa_24v_pt_apache.sh  mapa_24v_reg.sh  mapa_24v_reg_sparse.sh  pi3.sh  pow3r_csfm.sh  pow3r_dc.sh  pow3r_mvs.sh  pow3r_reg.sh  vggt.sh  vggt_commercial.sh
MapAnything/bash_scripts/train/ablations/1_output_representation/: 1a_pm_conf_mask.sh  1c_rdp_conf_mask.sh
MapAnything/bash_scripts/train/ablations/2_attention/: 2a_gat.sh
MapAnything/bash_scripts/train/ablations/3_loss/: 3d_up_to_scale_loss.sh  3g_no_depth_loss.sh  3h_no_pose_loss.sh
MapAnything/bash_scripts/train/ablations/4_curriculum/: 4a_direct_24v.sh
MapAnything/bash_scripts/train/ablations/6_expert_training/: 6a_mvs.sh  6b_registration.sh  6c_universal.sh
MapAnything/bash_scripts/train/examples/: mapa_curri_4v_bmvs_48ipg_8g.sh  mapa_img_only_4v_bmvs_48ipg_8g.sh
MapAnything/bash_scripts/train/finetuning/: moge2_finetuning.sh
MapAnything/benchmarking/calibration/: README.md  benchmark.py
MapAnything/benchmarking/dense_n_view/: benchmark.py  benchmark_global_pm_only.py
MapAnything/benchmarking/rmvd_mvs_benchmark/: benchmark.py
MapAnything/configs/: rmvd_benchmark.yaml  train.yaml
MapAnything/configs/dataset/: default.yaml  megatrain_13d_512_many_ar_24ipg_16g.yaml  megatrain_13d_518_many_ar_24ipg_16g.yaml  megatrain_13d_518_many_ar_24ipg_8g.yaml  megatrain_13d_518_many_ar_48ipg_64g.yaml  megatrain_13d_518_many_ar_48ipg_8g_mono.yaml  megatrain_6d_518_many_ar_48ipg_64g.yaml  megatrain_6d_518_many_ar_48ipg_8g.yaml
MapAnything/configs/dataset/scannetpp_wai/: default.yaml
MapAnything/configs/loss/: conf_pm_mask_loss.yaml  entangled_metric_loss.yaml  no_depth_loss.yaml  no_points_loss.yaml  no_pose_loss.yaml  overall_disentangled_loss.yaml  overall_loss_weigh_pm_higher.yaml  pi3_loss.yaml  up_to_scale_loss.yaml
MapAnything/configs/machine/: aws.yaml  default.yaml  psc.yaml  xri_dgx.yaml
MapAnything/configs/train_params/: default.yaml  finetune_with_lower_encoder_lr_64g.yaml  freeze_encoder.yaml  lower_encoder_lr_64g.yaml  moge2_finetune.yaml
MapAnything/data_processing/wai_processing/: pyproject.toml
MapAnything/data_processing/wai_processing/download_scripts/: download_dynamicreplica.py  download_eth3d.py  download_megadepth.py  download_unrealstereo4k.py
MapAnything/data_processing/wai_processing/scripts/: depth_consistency_confidence.py
MapAnything/data_processing/wai_processing/utils/: state.py
MapAnything/mapanything.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MapAnything/mapanything/datasets/wai/: ase.py  unrealstereo4k.py
MapAnything/mapanything/train/: losses.py
MapAnything/scripts/: demo_colmap.py  demo_images_only_inference.py  gradio_app.py  profile_dataloading.py  train.py
(+638 files in other folders)
