[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapanything"
version = "1.0"
description = "Universal Feed-Forward Metric 3D Reconstruction"
readme = "readme.md"
authors = [{ name = "Nikhil Keetha", email = "keethanikhil@gmail.com" }]
requires-python = ">=3.10.0"
dependencies = [
    "huggingface_hub",
    "hydra-core",
    "natsort",
    "opencv-python-headless==4.10.0.84",
    "orjson",
    "pillow-heif",
    "plyfile",
    "python-box",
    "safetensors",
    "tensorboard",
    "tqdm",
    "torchaudio", ## Temp for AWS
    "torch~=2.6.0", ## Temp for AWS
    "torchvision", ## Temp for AWS
    "trimesh",
    "uniception",
]

[project.optional-dependencies]
data = ["pandas"]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff"]
colmap = [
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
    "pycolmap==3.10.0"
]
gradio = ["gradio", "spaces"]
radio = ["timm"]
# External models for benchmarking
anycalib = ["anycalib @ git+https://github.com/javrtg/AnyCalib.git@main#egg=anycalib"]
dust3r = [
    "croco @ git+https://github.com/naver/croco.git@croco_module#egg=croco",
    "dust3r @ git+https://github.com/naver/dust3r.git@dust3r_setup#egg=dust3r",
]
mast3r = ["mast3r @ git+https://github.com/Nik-V9/mast3r.git@main#egg=mast3r"]
must3r = ["must3r @ git+https://github.com/naver/must3r.git@main#egg=must3r"]
pow3r = ["pow3r @ git+https://github.com/Nik-V9/pow3r.git@main#egg=pow3r"]

rmvd = ["rmvd @ git+https://github.com/infinity1096/robustmvd.git@master#egg=rmvd"]

# Install all optional dependencies
all = [
    "mapanything[anycalib]",
    "mapanything[colmap]",
    "mapanything[data]",
    "mapanything[dev]",
    "mapanything[dust3r]",
    "mapanything[gradio]",
    "mapanything[mast3r]",
    "mapanything[must3r]",
    "mapanything[pow3r]",
    "mapanything[radio]",
    "mapanything[rmvd]",
]

# Setuptools configuration
[tool.setuptools]
# Disable automatic package discovery to avoid conflicts
packages = ["mapanything"]

# Include package data
[tool.setuptools.package-data]
"mapanything" = ["**/*"]

# Ruff for linting
[tool.ruff]
# Enable the isort rules.
lint.extend-select = ["I"]

# Following https://www.internalfb.com/wiki/Python/code_formatting/pyfmt/
target-version = "py310"

# Following https://www.internalfb.com/wiki/Python/code_formatting/pyfmt/
[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
detect-same-package = false
order-by-type = false
known-first-party = ["mapanything", "uniception"]
